--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ baseurl: "/noalfemminicidio.github.io"
 #
 
 #Google Ad Words Data from scripts code (using Google responsive options) and ad client
-data-ad-slot: 2973388149
-data-ad-client: ca-pub-9204963049240271
-google_ad_client: ca-pub-9204963049240271
+data-ad-slot: 
+data-ad-client: 
+google_ad_client: 
 
 post_limit: 5
 
@@ -100,7 +100,7 @@ JB :
   comments :
     provider : disqus
     disqus : 
-      short_name : jeky-new-age
+      short_name : 
     #livefyre :
     #  site_id : 
     #intensedebate :
@@ -118,11 +118,11 @@ JB :
   analytics :
     provider : google
     google :
-        tracking_id : 'UA-94080000-1'
+        tracking_id : 
     getclicky :
       site_id :
     mixpanel :
-        token : '_MIXPANEL_TOKEN_'
+        token : 
     piwik :
         baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
         idsite : '1'                   # the id of the site on Piwik
